# vvar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vvar.h  vvar_impl.h
.github/workflows/: ci.yml
tests/: vvar_test_stubs.h  vvar_tests.cpp
